--- a/javascript-in-a-hurry-initial-main/index.html
+++ b/javascript-in-a-hurry-initial-main/index.html
@@ -200,7 +200,7 @@
         </div>
 
         <div class="products-area">
-          <div class="product-item">
+          <!-- <div class="product-item">
              <img src="./assets/products/img6.png" alt="AstroFiction">
              <div class="product-details">
                 <h3 class="product-title">AstroFiction</h3>
@@ -226,7 +226,7 @@
                 <p class="price-title">Price</p>
                 <p class="product-price">Free</p>
              </div>
-          </div>
+          </div> -->
           
        </div>
 
